--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -3,11 +3,9 @@ theme-override: assets/css/PITCHME.css
 transition : none
 
 code-line-numbers : true
-
 title : "DBSCAN - A New Way to Cluster"
-
 description : "Density based clustering and how to do it"
 
-highlight: atom-one-dark
+# highlight: atom-one-dark
 
-# Atelier Forest Light
+highlight: atelier-forest-light
